# cs203-c19-analysis

./: .flake8  .gitignore  .gitmodules  .prettierrc  .pylintrc  EDUCATION-LICENSE  LICENSE  README-TH.md  README.md  __init__.py  acknowledgement.ipynb  directories.py  download_dataset.sh  environment.yml  geo_admin_lookup.py  inspect.ipynb  lint.py  path.py  prerequisite.py  prerequisites.py  readme-th.md  readme.md  requirements.txt  setup.cfg  setup.py  setup.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTORS.md  README-TH.md  README.md  SECURITY.md  _Footer.md  dependabot.yml  toc.css
.github/docs/: FAQ.md  prerequisites.md  refs.md
.github/workflows/: dependency-review.yml  linux-unix-python.yml  pytest.yml  python-app.yml  python.yml  testing-linting.yml  testing-python.yml  windows-python.yml
api/: geo_admin_lookup.py  get_fips.py
code/: PTCTEST1.ipynb  PTCTEST2.ipynb  Test.ipynb  __init__.py  inspect.ipynb  preparation.ipynb  preview.ipynb  ranking.ipynb  ranking2.ipynb  show_on_map.ipynb  summarize.ipynb  validate.ipynb
code/A_collection/: 0_survey_with_data.ipynb  1_data_collection_preview.ipynb  data_collection_preview.ipynb
code/B_preparation/: 1_assemble.ipynb  2_missing_value.ipynb  assemble.ipynb  missing_value.ipynb  name_state_us.json
code/B_preparation/steps/: Data_type.ipynb  Fix_header.ipynb  homogeneity.ipynb  remove_dup.ipynb  remove_missing.ipynb
code/C_exploration/: 1_explore_by_seasonal.ipynb  2_infected_behavior.ipynb  3_all_time_behavior.ipynb  3_cases_by_state.ipynb  data_handler.py  explore.ipynb  explore_by_seasonal.ipynb  explore_by_year.ipynb  format_data.py  infected_behavior.ipynb
code/C_exploration/data/: cases_by_state.csv
code/D_prediction/: 1_cases_and_deaths_relationship.ipynb  1_cases_by_season.ipynb  1_cases_by_state.ipynb  4_behavior_by_state.ipynb  5_cases_prediction.ipynb  6_relation_b_state.ipynb  explore_data.py
code/D_prediction/data/: refs.md
code/Z_playground/: PTCTEST1.ipynb  PTCTEST2.ipynb  directories.py  prerequisites.py  ranking.ipynb  ranking2.ipynb  show_on_map.ipynb  validator.ipynb
code/Z_playground/.github/workflows/: testing-linting.yml
code/Z_playground/env/: dev-requirements.txt
code/Z_playground/notebooks/: PTCTEST2.ipynb  Test.ipynb  acknowledgement.ipynb  validator.ipynb
code/Z_playground/notebooks/preview/: preview.ipynb
code/Z_playground/preview/: inspect.ipynb  preview.ipynb  summarize.ipynb
code/Z_playground/src/: __init__.py  data_handler.py  download.sh  downloader.py  plotter.py
code/Z_playground/src/api/: __init__.py  fips.py  geo_admin_lookup.py
code/Z_playground/test/: __init__.py  test_data_handler.py  test_directories.py  test_fips.py  test_plotter.py
code/Z_playground/visual/: data.ipynb  handle.py
code/playground/: ranking2.ipynb  show_on_map.ipynb
code/playground/preview/: inspect.ipynb  summarize.ipynb
code/playground/visual/: handle.py
code/preparation/: Data_type.ipynb  assemble.ipynb  preparation.ipynb  remove_dup.ipynb  remove_missing.ipynb
code/preparation/steps/: Fix_header.ipynb  homogeneity.ipynb
code/present/: acknowledgement.ipynb
code/preview/: inspect.ipynb  preview.ipynb  summarize.ipynb
code/sample/: fips.ipynb  show_on_map.ipynb
code/visual/: data.ipynb  handle.py
docs/: FAQ.md  assignment.md  etc.md  job_PutterTh.txt  prerequisites.md  pythonenv.md  refs.md
docs/job/: AppleBoiy  KonGKerDvD  PutterTh  PutterTh.txt
notebooks/: inspect.ipynb
presentation/: refs.md
sample/: PTCTEST1.ipynb  PTCTEST2.ipynb  Test.ipynb  fips.ipynb  inspect.ipynb
src/: __init__.py  data_handler.py  download.sh  downloader.py  geo_admin_lookup.py  get_fips.py  heatmap.py  inspect.ipynb  logger.py  plotter.py  validator.ipynb  validator.py
src/api/: __init__.py  admin2_api.py  fips.py  gdrive.py  geo_admin_lookup.py  google.py  setup.py
test/: __init__.py  fips.ipynb  inspect.ipynb  requirements.txt  test_data_handler.py  test_directories.py  test_fips.py  test_logger.py  test_plotter.py  test_validator.py
