[metadata]
name = cs203-covid19-analysis-2023
version = 0.1
author = AppleBoiy
long_description = file: .github/README.md
long_description_content_type = text/markdown
url = https://github.com/AppleBoiy/cs203-covid19-analysis-2023
license = GPL-3.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPL-3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Data Analysis

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.24.3
    matplotlib==3.7.1
    pandas==1.5.3
    requests==2.31.0
    folium==0.14.0
    scipy==1.10.1
    ipython==8.12.0
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib


[options.extras_require]
dev =
    pytest
    pylint
    flake8

[coverage:run]
omit =
    */tests/*
    */test_*
    src/api/*.py
    *download*

[tool:pytest]
addopts = --cov=src --cov-report=term-missing --cov-fail-under=80

[flake8]
max-line-length = 88
exclude = .git,__pycache__,venv,data,docs,build,dist,*.egg-info
ignore = E203, E266, E501, W503, F403, F401
