[metadata]
name = cs203-covid19-analysis-2023
version = 0.1
author = AppleBoiy
long_description = file: .github/README.md
long_description_content_type = text/markdown
url = https://github.com/AppleBoiy/cs203-covid19-analysis-2023
license = GPL-3.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPL-3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Data Analysis

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy~=1.26.0
    matplotlib~=3.8.0
    pandas~=2.1.1
    requests~=2.31.0
    folium~=0.14.0
    google-api-python-client~=2.101.0
    google-auth-httplib2~=0.1.1
    google-auth-oauthlib~=1.1.0
    scipy~=1.11.3
    ipython~=8.16.1
    kaggle~=1.5.16
    jupyter~=1.0.0
    seaborn~=0.13.0


[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-mock
    requests-mock
    pylint
    flake8
    black

[coverage:run]
omit =
    */tests/*
    */test_*
    src/api/*.py
    *download*

[tool:pytest]
addopts = --cov=src --cov-report=term-missing --cov-fail-under=80

[flake8]
max-line-length = 88
exclude = .git,__pycache__,venv,data,docs,build,dist,*.egg-info
ignore = E203, E266, E501, W503, F403, F401
